fixed layout of posting item index on small devices

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1448,6 +1448,9 @@ select {
 .whitespace-nowrap {
 	white-space: nowrap;
 }
+.break-all {
+	word-break: break-all;
+}
 .rounded-md {
 	border-radius: 0.375rem;
 }
@@ -2191,6 +2194,10 @@ select {
 
 	.sm\:flex {
 		display: flex;
+	}
+
+	.sm\:inline-flex {
+		display: inline-flex;
 	}
 
 	.sm\:hidden {
